[package]
name = "bevy_ahoy"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0 "
description = "Behavior as entities!"
readme = "readme.md"
repository = "https://github.com/janhohenheim/bevy_ahoy"
keywords = ["kcc", "character", "controller", "source", "quake"]
categories = ["game-development"]
include = ["/src", "/license*", "/examples"]


[features]
default = ["f32"]
f32 = ["avian3d/parry-f32"]
f64 = ["avian3d/parry-f64"]

[dependencies]
avian3d = { version = "0.4.1", default-features = false, features = ["default-collider", "3d"] }
bevy_ecs = "0.17"
bevy_app = "0.17"
bevy_derive = "0.17"
bevy_utils = "0.17"
bevy_math = "0.17"
bevy_reflect = "0.17"
bevy_transform = "0.17"
bevy_time = "0.17"
bevy_enhanced_input = "0.19.3"
tracing = "0.1"

[dev-dependencies]
bevy = { version = "0.17", features = ["track_location", "experimental_pbr_pcss"] }
bevy_trenchbroom = "0.11.0"
bevy_trenchbroom_avian = "0.11.0"
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
avian3d = "0.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
# missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[patch.crates-io]
avian3d = { git = "https://github.com/avianphysics/avian" }
