[package]
name = "bevy_ahoy"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0 "
description = "A fun 3D Kinematic Character Controller for Bevy + Avian + BEI."
readme = "readme.md"
repository = "https://github.com/janhohenheim/bevy_ahoy"
keywords = ["kcc", "character", "controller", "source", "quake"]
categories = ["game-development"]
include = ["/src", "/license*", "/examples"]


[features]
default = ["f32"]
f32 = ["avian3d/parry-f32"]
f64 = ["avian3d/parry-f64"]

[dependencies]
avian3d = { version = "0.4.1", default-features = false, features = ["default-collider", "3d"] }
bevy_ecs = { version = "0.17", default-features = false }
bevy_app = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_utils = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false }
bevy_time = { version = "0.17", default-features = false }
bevy_enhanced_input = { version = "0.19.3", default-features = false }
tracing = { version = "0.1", default-features = false }
bevy_fix_cursor_unlock_web = "0.2.0"

[dev-dependencies]
bevy = { version = "0.17", features = ["track_location"] }
bevy_trenchbroom = "0.11.0"
bevy_trenchbroom_avian = "0.11.0"
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
avian3d = "0.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
# missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[patch.crates-io]
avian3d = { git = "https://github.com/avianphysics/avian" }
